added particle js

--- a/MarkUps-App-Landy/app-landy/stats.html
+++ b/MarkUps-App-Landy/app-landy/stats.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
+<head><!-- particles.js container --> <div id="particles-js"></div> <!-- stats - count particles --> <div class="count-particles"> <span class="js-count-particles">--</span> particles </div> <!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib --> <script src="http://threejs.org/examples/js/libs/stats.min.js"></script></head>
 
+<div id="outer-div">
+<style>
+  /* ---- reset ---- */ body{ margin:0; font:normal 75% Arial, Helvetica, sans-serif; } canvas{ display: block; vertical-align: bottom; } /* ---- particles.js container ---- */ #particles-js{ position:fixed; width: 100%; height: 100%; background-color: #cacaca; z-index:-1;background-image: url(""); background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; } /* ---- stats.js ---- */ .count-particles{ background: #000022; position: absolute; top: 48px; left: 0; width: 80px; color: #13E8E9; font-size: .8em; text-align: left; text-indent: 4px; line-height: 14px; padding-bottom: 2px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; } .js-count-particles{ font-size: 1.1em; } #stats, .count-particles{ -webkit-user-select: none; margin-top: 5px; margin-left: 5px; } #stats{ border-radius: 3px 3px 0 0; overflow: hidden; } .count-particles{ border-radius: 0 0 3px 3px; }
+</style>
+
+<script>
+  particlesJS("particles-js", {"particles":{"number":{"value":80,"density":{"enable":true,"value_area":800}},"color":{"value":"#000000"},"shape":{"type":"circle","stroke":{"width":0,"color":"#000000"},"polygon":{"nb_sides":5},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":0.5,"random":false,"anim":{"enable":false,"speed":1,"opacity_min":0.1,"sync":false}},"size":{"value":3,"random":true,"anim":{"enable":false,"speed":40,"size_min":0.1,"sync":false}},"line_linked":{"enable":true,"distance":150,"color":"#000000","opacity":0.4,"width":1},"move":{"enable":true,"speed":6,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":true,"mode":"repulse"},"onclick":{"enable":true,"mode":"push"},"resize":true},"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},"bubble":{"distance":400,"size":40,"duration":2,"opacity":8,"speed":3},"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});var count_particles, stats, update; stats = new Stats; stats.setMode(0); stats.domElement.style.position = 'absolute'; stats.domElement.style.left = '0px'; stats.domElement.style.top = '0px'; document.body.appendChild(stats.domElement); count_particles = document.querySelector('.js-count-particles'); update = function() { stats.begin(); stats.end(); if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) { count_particles.innerText = window.pJSDom[0].pJS.particles.array.length; } requestAnimationFrame(update); }; requestAnimationFrame(update);;
+</script>>
 <body>
 
 <div id="main-stats" align="center">
@@ -95,7 +104,7 @@ function input() {
   }
   </script></head>
 <body>
-  <div id="chart_div" style="width: 900px; height:300px;"> </div>
+  <div id="chart_div" style="width: 500px; height:300px;"> </div>
 </body>
 </div>
 
@@ -108,7 +117,7 @@ function input() {
 }
 </style>
 
-<div class="health-stats" >
+<div class="health-stats" align="center">
   <div id="input_2">
   <!-- #Input Code -->
   <h1>acko health-stats</h1>
@@ -178,7 +187,7 @@ function input() {
     }
     </script></head>
   <body>
-    <div id="chart_div_2" style="width: 900px; height:500px;"> </div>
+    <div id="chart_div_2" style="width: 500px; height:300px;"> </div>
   </body>
 
 </div>
@@ -190,7 +199,7 @@ function input() {
   margin-right: 100px;
 }
 </style>
-<div class="Motor_Stats">
+<div class="Motor_Stats" align="center">
   <h1>acko Motor-Stats</h1>
 <div id="input_3">
 <!-- #Input Code -->
@@ -270,11 +279,11 @@ function input_3() {
     </script>
   </head>
   <body>
-    <div id="curve_chart_3" style="width: 900px; height: 500px"></div>
+    <div id="curve_chart_3" style="width: 500px; height: 300px"></div>
   </body>
 </div>
 
-<div class="travel-stats" >
+<div class="travel-stats" align="center">
   <div id="input_2">
   <!-- #Input Code -->
   <h1>acko travel-stats</h1>
@@ -344,13 +353,13 @@ function input_3() {
     }
     </script></head>
   <body>
-    <div id="chart_div_4" style="width: 900px; height:500px;"> </div>
+    <div id="chart_div_4" style="width: 500px; height:300px;"> </div>
   </body>
 
 </div>
 
 
-<div class="Acko Fire_Stats">
+<div class="Acko Fire_Stats" align="center">
   <h1>acko Fire-Stats</h1>
 <div id="input_5">
 <!-- #Input Code -->
@@ -409,8 +418,9 @@ function input_5() {
     </script>
   </head>
   <body>
-    <div id="curve_chart_5" style="width: 900px; height: 500px"></div>
+    <div id="curve_chart_5" style="width: 500px; height: 300px"></div>
   </body>
 </div>
-
+</body>
+</div>
 </html>
