added coded feedback form

--- a/MarkUps-App-Landy/app-landy/feedback.html
+++ b/MarkUps-App-Landy/app-landy/feedback.html
@@ -1,9 +1,68 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-<title>FeedBack Form</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box;}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+</style>
 </head>
 <body>
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdL57Wh-J9YhMEweYcg2da1NxBiJlLzYMFfTM3V5_PFhoYzPg/viewform?embedded=true" width="640" height="1323" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+<h3>Feedback Form</h3>
+
+<div class="container">
+  <form action="/action_page.php">
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="india">India</option>
+      <option value="australia">Australia</option>
+      <option value="canada">Canada</option>
+      <option value="usa">USA</option>
+    </select>
+
+    <label for="feedback">FeedBack</label>
+    <textarea id="feedback" name="feedback" placeholder="Please give your valuable feedback.." style="height:200px"></textarea>
+    <input type="submit" value="Submit">
+  </form>
+</div>
+
 </body>
+<!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdL57Wh-J9YhMEweYcg2da1NxBiJlLzYMFfTM3V5_PFhoYzPg/viewform?embedded=true" width="640" height="1323" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe> -->
 </html>
