--- a/MarkUps-App-Landy/app-landy/stats.html
+++ b/MarkUps-App-Landy/app-landy/stats.html
@@ -38,7 +38,8 @@ function input() {
     if ( Type_old === 'Life' ){
       a = parseInt(Number_old);
       // alert(Type_old + " " + Number_old + " " + a);
-      //   console.log(a);
+        console.log("Session:"+session_active);
+
     }
 
     if ( Type_old === 'Home' ){
