--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -214,7 +214,7 @@
           </div>
           <div class="container">
             <a href="https://biteable.com/watch/acko-2103031">
-              <img src="assets/images/macbook-pro.png" alt="image" style="width:428;height:276 align="middle"; padding-left: 300; ">
+              <img src="assets/images/image(1).png" alt="image" style="width:428;height:276 align="middle"; padding-left: 300; ">
             </a>
         </div>
       </div>
