--- a/MarkUps-App-Landy/app-landy/login_new.html
+++ b/MarkUps-App-Landy/app-landy/login_new.html
@@ -1,5 +1,7 @@
 <html>
+<div id="outer" margin-left="50px">
 <head>
+
 <title>Javascript Login Form Validation</title>
 <!-- Include CSS File Here -->
 <link rel="stylesheet" href="assets/css/login_new.css"/>
@@ -7,8 +9,8 @@
 <script src="assets/js/login_new.js"></script>
 </head>
 <body>
-<div class="container">
-<div class="main">
+<div class="container" style="margin:0 auto;">
+  <div class="main align="center"">
 <h2>acko Admin Form </h2>
 <form id="form_id" method="post" name="myform">
 <label>User Name :</label>
@@ -17,8 +19,9 @@
 <input type="password" name="password" id="password"/>
 <input type="button" value="Login" id="submit" onclick="validate()"/>
 </form>
-<span><b class="note">Note : </b>For this demo use following username and password. <br/><b class="valid">User Name : acko<br/>Password : acko123</b></span>
+  <span><b class="note">Note : </b>For this demo use following username and password. <br/><b class="valid">User Name : acko<br/>Password : acko123</b></span>
 </div>
 </div>
 </body>
+</div>
 </html>
