Admin page done

--- a/MarkUps-App-Landy/app-landy/admin.html
+++ b/MarkUps-App-Landy/app-landy/admin.html
@@ -1,12 +1,12 @@
 <html>
-<div id="outer" margin-left="50px">
+<div id="outer" margin-left="50px" position="">
 <head>
 
 <title>Javascript Login Form Validation</title>
 <!-- Include CSS File Here -->
-<link rel="stylesheet" href="assets/css/login_new.css"/>
+<link rel="stylesheet" href="assets/css/admin.css"/>
 <!-- Include JS File Here -->
-<script src="assets/js/login_new.js"></script>
+<script src="assets/js/admin.js"></script>
 </head>
 <body>
 <div class="container" style="margin:0 auto;">
