--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -278,7 +278,7 @@ right: 0;
 }
 </style>
 
-        <a href = "stats.html" ><button class="button"><span>Click Here </span></button></a>
+        <a href = "userpage.html" ><button class="button"><span>Click Here </span></button></a>
           <h1></h1>
           <h1></h1>
           <form>
@@ -471,7 +471,7 @@ right: 0;
                 <textarea class="form-control" rows="3" placeholder="Your Message"></textarea>
               </div>
               <div class="send-area">
-                
+
                 <button type="submit" class="send-btn" onclick="send_email()">Send Now</button>
                 <!-- <alert> Successfully sent</alert> -->
               <script>
